🩹 Fix API Base Path in Swagger Doc Update MVC Method Names to Enable Routing.
